# CoFiPruning_DistilBERT_gaurav

./: README.md  requirements.txt  run_all.sh  run_sweep.py  train_dense.py
DistilBERT_review/: compress_and_evaluate.py  pruning_init.py  pruning_l0_module.py
cofi-distilbert-sweeps/: pyproject.toml  run_one.sh
cofi-distilbert-sweeps/src/cofi_distilbert/: __init__.py  data.py
configs/: tasks.yaml
scripts/: run_all.sh  run_one.sh
src/cofi_distilbert/: cofi.py  metrics.py  utils.py
src/cofi_distilbert/pruning/: cofi_utils.py  config_shim.py  modeling_distilbert.py
