[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cofi-distilbert-sweeps"
version = "0.1.0"
description = "CoFi-style structured pruning sweeps for DistilBERT on SST-2, QNLI, and AG News."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
